--- a/ManageCenter/App.config
+++ b/ManageCenter/App.config
@@ -1,33 +1,20 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
   <connectionStrings>
-    <add name="mysqlConn" connectionString="Database=ticket;Data Source=localhost;User Id=admin;Password=Txmy0071;pooling=false;CharSet=utf8;port=33069;" />
     <add name="DefaultConnection" connectionString="Data Source = |SQL/CE|" />
+    <add name="mysqlConn" connectionString="Database=manageCenter;Data Source=localhost;User Id=admin;Password=Txmy0071;pooling=false;CharSet=utf8;port=33069;" />
   </connectionStrings>
   <appSettings>
     <add key="InitStep" value="3" />
-    <add key="CurrStationId" value="047ee76b-314c-45cd-9216-f1238235d86c" />
-    <add key="coryRight" value="" />
-    <add key="defaultPrintFrequency" value="2" />
-    <add key="BillDescription" value="白联存根，红联财务，黄联运费，绿联随车，其它" />
+    <add key="CurrStationId" value="jgzxe76b-314c-45cd-9216-f1238235d89c" />
     <add key="PrintTitle" value="云南省曲靖市富源县煤炭管理运煤放行单" />
-    <add key="CashReportTitle" value="煤炭管理运煤补税单" />
-    <add key="autoPrint" value="1" />
+    <add key="BillDescription" value="白联存根，红联财务，黄联运费，绿联随车，其它" />
+    <add key="defaultPrintFrequency" value="2" />
     <add key="autoPrintSecend" value="2" />
-    <add key="limitTone" value="1.2" />
+    <add key="autoPrint" value="1" />
     <add key="IsUnifeidLimitTone" value="1" />
-    <add key="SoftSrartDate" value="2019-01-01 00:00:00" />
+    <add key="limitTone" value="1.4" />
     <add key="SoftEndDate" value="1577288344000" />
-    <add key="CameraCaptureFilePath" value="" />
-    <add key="DataBits" value="8" />
-    <add key="ScaleBrandType" value="1" />
-    <add key="ScaleSeries" value="XK3190-A9" />
-    <add key="IcBaudRate" value="9600" />
-    <add key="IcCom" value="COM3" />
-    <add key="Com" value="COM3" />
-    <add key="BillNumberDate" value="2018-12-26" />
-    <add key="BaudRate" value="1200" />
-    <add key="BillNumberSort" value="8" />
   </appSettings>
   <startup>
     <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.6" />
