--- a/ManageCenter/ManageCenter.csproj
+++ b/ManageCenter/ManageCenter.csproj
@@ -86,6 +86,10 @@
     <Compile Include="entity\model\RolesModel.cs" />
     <Compile Include="entity\visual\RoleUserV.cs" />
     <Compile Include="enum\ResourceName.cs" />
+    <Compile Include="ui\PasswordWindow.xaml.cs" />
+    <Compile Include="ui\StationAddWindow.xaml.cs">
+      <DependentUpon>StationAddWindow.xaml</DependentUpon>
+    </Compile>
     <Compile Include="ui\MaterialManageWindow.xaml.cs" />
     <Compile Include="ui\MaterialPriceWindow.xaml.cs">
       <DependentUpon>MaterialPriceWindow.xaml</DependentUpon>
@@ -102,6 +106,9 @@
     <Compile Include="ui\SettingW.xaml.cs" />
     <Compile Include="ui\MaterailAddWindow.xaml.cs">
       <DependentUpon>MaterailAddWindow.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="ui\StationManageWondow.xaml.cs">
+      <DependentUpon>StationManageWondow.xaml</DependentUpon>
     </Compile>
     <Compile Include="ui\UserAddWindow.xaml.cs">
       <DependentUpon>UserAddWindow.xaml</DependentUpon>
@@ -207,6 +214,14 @@
       <DependentUpon>MainWindow.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
+    <Page Include="ui\PasswordWindow.xaml">
+      <Generator>MSBuild:Compile</Generator>
+      <SubType>Designer</SubType>
+    </Page>
+    <Page Include="ui\StationAddWindow.xaml">
+      <Generator>MSBuild:Compile</Generator>
+      <SubType>Designer</SubType>
+    </Page>
     <Page Include="ui\MaterialManageWindow.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
@@ -242,6 +257,10 @@
     <Page Include="ui\MaterailAddWindow.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
+    </Page>
+    <Page Include="ui\StationManageWondow.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
     </Page>
     <Page Include="ui\UserAddWindow.xaml">
       <SubType>Designer</SubType>
