--- a/ManageCenter/App.config
+++ b/ManageCenter/App.config
@@ -15,6 +15,7 @@
     <add key="IsUnifeidLimitTone" value="1" />
     <add key="limitTone" value="1.4" />
     <add key="SoftEndDate" value="1577288344000" />
+    <add key="listenerPort" value="http://+:8089/" />
   </appSettings>
   <startup>
     <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.6" />
