--- a/ManageCenter/ManageCenter.csproj
+++ b/ManageCenter/ManageCenter.csproj
@@ -64,6 +64,14 @@
     <Reference Include="WindowsBase" />
     <Reference Include="PresentationCore" />
     <Reference Include="PresentationFramework" />
+    <Reference Include="WPFVisifire.Charts, Version=5.1.3.0, Culture=neutral, PublicKeyToken=0cd785983078370b, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>dll\WPFVisifire.Charts.dll</HintPath>
+    </Reference>
+    <Reference Include="WPFVisifire.Gauges, Version=5.1.3.0, Culture=neutral, PublicKeyToken=bf0af9b99ac47981, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>dll\WPFVisifire.Gauges.dll</HintPath>
+    </Reference>
   </ItemGroup>
   <ItemGroup>
     <ApplicationDefinition Include="App.xaml">
@@ -85,6 +93,7 @@
     <Compile Include="entity\model\BillIamgeModel.cs" />
     <Compile Include="entity\model\MaterialTaxationRecordModel.cs" />
     <Compile Include="entity\model\RolesModel.cs" />
+    <Compile Include="entity\visual\ChartDataV.cs" />
     <Compile Include="entity\visual\RoleUserV.cs" />
     <Compile Include="enum\ResourceName.cs" />
     <Compile Include="http\HttpListenerHelper.cs" />
