测试图片上传未果

--- a/ManageCenter/App.config
+++ b/ManageCenter/App.config
@@ -16,8 +16,8 @@
     <add key="limitTone" value="1.4" />
     <add key="SoftEndDate" value="1577288344000" />
     <add key="listenerPort" value="http://+:8089/" />
-    <add key="imageSavePath" value="E:/image" />
-    <add key="isOpenListence" value="0" />
+    <add key="imageSavePath" value="E:\\weighing\\image" />
+    <add key="isOpenListence" value="1" />
   </appSettings>
   <startup>
     <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.6" />
