添加一行备用的连接代码

--- a/ManageCenter/App.config
+++ b/ManageCenter/App.config
@@ -2,7 +2,8 @@
 <configuration>
   <connectionStrings>
     <add name="DefaultConnection" connectionString="Data Source = |SQL/CE|" />
-    <add name="mysqlConn" connectionString="Database=manageCenter;Data Source=localhost;User Id=admin;Password=Txmy0071;pooling=false;CharSet=utf8;port=33069;" />
+    <add name="mysqlConn" connectionString="Database=manageCenter;Data Source=127.0.0.1;User Id=admin;Password=code@8888;pooling=false;CharSet=utf8;port=3306;" />
+    <!--<add name="mysqlConn" connectionString="Database=manageCenter;Data Source=localhost;User Id=admin;Password=Txmy0071;pooling=false;CharSet=utf8;port=33069;" /> -->
   </connectionStrings>
   <appSettings>
     <add key="InitStep" value="3" />
